Add UI modal for player renaming
