# docs/swagger.json
@@ -164,7 +164,7 @@
                 }
             }
         },
-        "/api/user/rename": {
+        "/api/user/{id}/rename": {
             "post": {
                 "description": "Update a user's name and notify the game if provided",
                 "consumes": [
@@ -178,6 +178,13 @@
                 ],
                 "summary": "Rename user",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "rename request",
                         "name": "data",
@@ -229,9 +236,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "userId": {
                     "type": "string"
                 }
             }
